@@ -629,6 +629,8 @@ from the vector space $\complex{3}$.  Let $A$ be the matrix whose columns are th
 </proof>
 </theorem>
 
+<p>The converse of <acroref type="theorem" acro="VRRB" /> is true as well, but is not important enough to rise beyond an exercise (see <acroref type="exercise" acro="LISS.T51" />).</p>
+
 <p>This is a very typical use of the hypothesis that a set is linearly independent <mdash /> obtain a relation of linear dependence and then conclude that the scalars <em>must</em> all be zero.  The result of this theorem tells us that we can write any vector in a vector space as a linear combination of the vectors in a linearly independent spanning set, but only just.  There is only enough raw material in the spanning set to write each vector one way as a linear combination.  So in this sense, we could call a linearly independent spanning set a <q>minimal spanning set.</q>  These sets are so important that we will give them a simpler name (<q>basis</q>) and explore their properties further in the next section.</p>
 
 </subsection>
@@ -1125,6 +1127,19 @@ which shows that $\vect{u}$ is a scalar multiple of $\vect{v}$.<br /><br />
 </alignmath>
 This is a relation of linear of linear dependence on $S$ (<acroref type="definition" acro="RLD" />), which is nontrivial since one of the scalars is $-1$.  Therefore $S$ is linearly dependent by <acroref type="definition" acro="LI" />.<br /><br />
 Be careful using this theorem.  It is only applicable to sets of two vectors.  In particular, linear dependence in a set of three or more vectors can be more complicated than just one vector being a scalar multiple of another.
+</solution>
+</exercise>
+
+<exercise type="T" number="51" rough="converse of vector representation">
+<problem contributor="robertbeezer">Carefully formulate the converse of <acroref type="theorem" acro="VRRB" /> and provide a proof.
+</problem>
+<solution contributor="robertbeezer">The converse could read: <q>Suppose that $V$ is a vector space and $S=\set{\vectorlist{v}{m}}$ is a set of vectors in $V$.  If, for each $\vect{w}\in V$, there are <em>unique</em> scalars $a_1,\,a_2,\,a_3,\,\ldots,\,a_m$ such that
+<equation>
+\vect{w}=\lincombo{a}{v}{m}
+</equation>
+then $S$ is a linearly independent set that spans $V$.</q><br /><br />
+Since every vector $\vect{w}\in V$ is assumed to be a linear combination of the elements of $S$, it is easy to see that $S$ is a spanning set for $V$ (<acroref type="definition" acro="SSVS" />).<br /><br />
+To establish linear independence, begin with an arbitrary relation of linear dependence on the vectors in $S$ (<acroref type="definition" acro="RLD" />).  One way to form such a relation is the trivial way, where each scalar is zero.   But our hypothesis of uniqueness then implies that that the <em>only</em> way to form this relation of linear dependence is the trivial way.  But this establishes the linear independence of $S$ (<acroref type="definition" acro="LI" />).
 </solution>
 </exercise>
 
