@@ -5,6 +5,7 @@ New:  Diagrams KPI, IVLT (pre-images, invertible linear transformations)
 New:  Diagram KRI (kernel and range isomorphisms)
 New:  Exercise NM.T31 (with solution)
 New:  Exercises LT.T30 and LT.T31
+New:  Exercise LISS.T51, converse of Theorem VRRB
 Change:  Replaced Definition RR by an informal discussion
 Change:  Definition TSVS renamed as Definition SSVS
 Change:  Proof Technique D: discussion about definitions as nouns, adjectives
